# buun-llama-cpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  GEMMA4_DFLASH_IMPL_SPEC.md  README.md
.github/workflows/: release.yml
common/: arg.cpp  arg.h  common.cpp  common.h  fit.cpp  sampling.cpp  sampling.h  speculative.cpp  speculative.h
conversion/: __init__.py  qwen.py
examples/: CMakeLists.txt
examples/frontier-hazard/: CMakeLists.txt  frontier-hazard.cpp
examples/speculative-simple/: speculative-simple.cpp
ggml/: CMakeLists.txt
include/: llama.h
scripts/: e9_rotation_offline.py  tcq_train_1bit.py  tq_gen_candidate_books.py  tq_v3_skew_rate.py
src/: llama-arch.cpp  llama-arch.h  llama-batch.cpp  llama-context.cpp  llama-context.h  llama-cparams.h  llama-ext.h  llama-graph.cpp  llama-graph.h  llama-hparams.h  llama-impl.cpp  llama-impl.h  llama-kv-cache-dsa.cpp  llama-kv-cache-dsa.h  llama-kv-cache-dsv4.h  llama-kv-cache-iswa.cpp  llama-kv-cache-iswa.h  llama-kv-cache.cpp  llama-kv-cache.h  llama-memory-hybrid-iswa.cpp  llama-memory-hybrid-iswa.h  llama-memory-hybrid.cpp  llama-memory-hybrid.h  llama-memory-recurrent.cpp  llama-memory-recurrent.h  llama-memory.h  llama-model.cpp  llama-model.h  llama-sampler.cpp  llama-vbr-degrade-orders.inc  llama-vocab.cpp  llama-vram-demand.cpp  llama-vram-demand.h  llama-vram-ledger.cpp  llama-vram-ledger.h
tools/: CMakeLists.txt
tools/pflash-dump/: CMakeLists.txt  analyze_pfi.py  gen_head_schedule.py  gen_masks.py  gen_random_draws.py  head_alloc.py  pflash-dump.cpp  run_exp15d.sh  run_exp15e_headaxis.sh
(+104 files in other folders)
